--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 <h1>Deliciousness in every bite!</h1>
 <h2>Im very delighted to meet you.</h2>
 <p>Every cookie made at the Kevin Cookie company is crafted with only the finest ingredients.
-Butter from grass fed cows. Unbleached flour with the best flavor and textures. 
+Butter from grass fed cows. Good Morning To All You!!. Unbleached flour with the best flavor and textures. 
 Organic sugar only from India. Eggs from chickens that are free range. 
 Even our water is special.My Name Is Ray, How Are You Doing? It comes from the Cascade Mountain springs that we hike up to retrieve. 
 Baking is our passion and we take it very seriously.</p>
