Changed the heading

--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>Deliciousness in every bite!</h1>
+<h1>Enjoy The Experience</h1>
 <h2>Im very delighted to meet you.</h2>
 <p>Every cookie made at the Ray and Family Cookie company is crafted with only the finest ingredients.
 Butter from grass fed cows. Good Morning To All You!!. Unbleached flour with the best flavor and textures. 
